--- a/ui/package.json
+++ b/ui/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
