--- a/ui/package.json
+++ b/ui/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "firebase": "^3.7.1",
     "immutable": "^3.8.1",
+    "lodash.omit": "^4.5.0",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
